@@ -8,8 +8,8 @@ android {
 		applicationId "de.christinecoenen.code.zapp"
 		minSdkVersion 19
 		targetSdkVersion 28
-		versionCode 27
-		versionName "1.11.1"
+		versionCode 28
+		versionName "1.11.2"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 	compileOptions {
