@@ -1,1 +1,2 @@
-* Streams von ARD repariert (danke an jw243).
+* Wiedergabefehler in Android P behoben.
+* Streams von DW+ repariert (danke an jw243).
